<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"> 
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainView"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        	<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:layout_weight="0.5"
    			android:layout_margin="5dp"
    			android:orientation="horizontal" >
	         	<TextView
		            android:text="@string/timeRangeDialogFrom"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="left"/>
	            <TextView
		            android:id="@+id/textViewStart"
		            android:layout_margin="5dp"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="left"/>
	            
			</LinearLayout>
			
        	<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:layout_weight="0.5"
    			android:layout_margin="5dp"
    			android:orientation="horizontal" >
	         	<TextView
		            android:text="@string/timeRangeDialogUntil"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="left"/>
	            <TextView
		            android:id="@+id/textViewEnd"
		            android:layout_margin="5dp"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="left"/>
	            
			</LinearLayout>
        	
  	 </TableRow>
    <TableRow
        android:id="@+id/tableRowRangeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    </TableRow>

     <TextView
        android:id="@+id/textViewAdvanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginBottom="30dip"
        android:text="@string/timeRangeDialogMoreDetails"
        android:textColor="#55B5E5" />

	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainViewExtend"
    android:orientation="vertical" >
     </LinearLayout>
     <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

         <Button
             android:id="@+id/buttonSet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:text="@string/timeRangeDialogSet" />

         <Button
             android:id="@+id/buttonCancel"
             android:layout_width="wrap_content"
             android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:text="@string/timeRangeDialogCancel" />
        
    </TableRow>
	
</LinearLayout>
</ScrollView>